cmake_minimum_required(VERSION 2.8.12)

IF(CSHARP_FOUND)
	PROJECT(NSCP.Protobuf)
	
	
	file(COPY
		${CMAKE_CURRENT_SOURCE_DIR}/Google.Protobuf.dll
		DESTINATION ${NSCP_PROJECT_BINARY_DIR})
	
	SET(CSHARP_BINARY_DIRECTORY ${NSCP_PROJECT_BINARY_DIR})
	INCLUDE(${CSHARP_USE_FILE})
	
	SET(CSHARP_BINARY_DIRECTORY ${BUILD_TARGET_EXE_PATH})
	CSHARP_ADD_LIBRARY(NSCP.Protobuf
		"${CMAKE_CURRENT_SOURCE_DIR}/Helpers.cs"
		"${PROJECT_BINARY_DIR}/Plugin.cs"
		"${PROJECT_BINARY_DIR}/Metrics.cs"
		"${PROJECT_BINARY_DIR}/Log.cs"
		"${PROJECT_BINARY_DIR}/Registry.cs"
		"${PROJECT_BINARY_DIR}/Settings.cs"
		"${PROJECT_BINARY_DIR}/Storage.cs"
		"${PROJECT_BINARY_DIR}/Common.cs"

		${NSCP_PROJECT_BINARY_DIR}/Google.Protobuf.dll
		${NSCP_PROJECT_BINARY_DIR}/NSCP.Core.dll
	)
	ADD_DEPENDENCIES(NSCP.Protobuf NSCP.Core)
	SET_TARGET_PROPERTIES(NSCP.Protobuf PROPERTIES FOLDER "libraries/dotnet")
	INSTALL(FILES ${BUILD_TARGET_EXE_PATH}/NSCP.Protobuf.dll Google.ProtocolBuffers.dll DESTINATION .)

ENDIF(CSHARP_FOUND)